--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,8 +3,14 @@
 #
 cmake_minimum_required (VERSION 3.8)
 
+add_subdirectory("effects")
+include_directories("effects")
+
 # Add source to this project's executable.
-add_executable (AudioProcessor "main.cpp")
+add_executable (AudioProcessor "main.cpp" "effects/Echo.h" "effects/Echo.cpp")
+
+# Echo
+target_include_directories("AudioProcessor" PUBLIC effectsLib)
 
 # Link argument parcing library
 target_include_directories("AudioProcessor" PUBLIC cxxopts)
