Added Audio processing library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,8 @@ project ("AudioProcessor")
 # Argument parcing library 
 add_subdirectory("extern/cxxopts")
 
+# Audio processing library
+add_subdirectory("extern/Q")
+
 # Include sub-projects.
 add_subdirectory ("src")
