Found better audio processing library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ project ("AudioProcessor")
 add_subdirectory("extern/cxxopts")
 
 # Audio processing library
+add_subdirectory("extern/kfr")
 
 # Include sub-projects.
 add_subdirectory ("src")
