--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "extern/cxxopts"]
 	path = extern/cxxopts
 	url = https://github.com/jarro2783/cxxopts
+[submodule "extern/kfr"]
+	path = extern/kfr
+	url = https://github.com/kfrlib/kfr.git
